# foundation

./: .gitignore  CMakeLists.txt  MemaryPool.cpp  MemaryPool.h  MemoryPool.cpp  PoolSharedPtr.h  README.md
cmake/: foundation-config.cmake
foundation/alloter/: alloter_interface.h  normal_alloter.cpp  normal_alloter.h  pool_alloter.cpp  pool_alloter.h  pool_block.cpp  pool_block.h
foundation/buffer/: buffer_block.cpp  buffer_block.h  buffer_interface.h  buffer_queue.cpp  buffer_queue.h
foundation/log/: base_logger.cpp  base_logger.h  file_logger.cpp  file_logger.h  log.cpp  log.h  log_stream.cpp  log_stream.h  logger_interface.h  stdout_logger.cpp  stdout_logger.h
foundation/network/: address.cpp  address.h  io_handle.h  net_handle.h  socket.h
foundation/network/posix/: io_handle.cpp  net_handle.cpp  socket.cpp
foundation/network/win/: io_handle.cpp  net_handle.cpp  socket.cpp
foundation/os/: convert.h  os_info.cpp  os_info.h
foundation/os/posix/: convert.cpp
foundation/os/win/: convert.cpp
foundation/structure/: list.h  list_solt.h  thread_safe_block_queue.h  thread_safe_queue.h  thread_safe_unordered_map.h
foundation/thread/: thread.h  thread_with_queue.h
foundation/timer/: timer.cpp  timer.h  timer_1ms.cpp  timer_1ms.h  timer_combin_container.cpp  timer_container.cpp  timer_container.h  timer_integer_container.h  timer_interface.h  timer_solt.cpp  timer_solt.h
foundation/timer/bk/: timer_combin_container.h  timer_integer_container.cpp
foundation/util/: any.h  bitmap.cpp  bitmap.h  config.cpp  config.h  os_return.h  random.cpp  random.h  singleton.h  time.cpp  time.h
src/alloter/: alloter_interface.h  normal_alloter.cpp  pool_alloter.cpp  pool_alloter.h
src/log/: file_logger.cpp  file_logger.h  log.h  logger_interface.h
src/network/: address.cpp  socket.h
src/network/win/: socket.cpp
src/os/: convert.h  os_info.h
src/structure/: list.h  thread_safe_queue.h
src/timer/: timer.h  timer_solt.cpp
src/util/: any.h  bitmap.h  config.cpp  os_return.h  singleton.h  time.cpp
third/gtest/: CMakeLists.txt  CMakeLists.txt.in
utest/: CMakeLists.txt  test.cpp  time_consuming.cpp  time_consuming.h
utest/alloter/: alloter_test.cpp
utest/gtest/: CMakeLists.txt
utest/log/: logger_stream_test.cpp  logger_test.cpp
utest/network/: address_test.cpp
utest/structure/: list_test.cpp
utest/timer/: combin_timer_container_test.cpp  common.h  integer_timer_container_test.cpp  timer_1ms_test.cpp  timer_container_test.cpp  timer_solt_test.cpp
utest/util/: bitmap_test.cpp  os_info_test.cpp  time_test.cpp
